Adding API functionality

--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
 
             <h4>Awesome Recipe Finder</h4>
             <div class="search">
-                <input type="text" class="search-input" placeholder="Forage for food">
+                <input type="text" id="search-input" placeholder="Forage for food">
                 <!-- <button><img href="icons8-search-26.png"></button> -->
-                <input type="submit" value="" placeholder="" class="search-button">
+                <input type="submit" value="" placeholder="" id="search-button">
             </div>
-            <div>
-                <p>all pictures</p>
-            </div>
-
         </div>
+        
+        <div id="recipes"></div>
 
     </div>
     
