Box and main style

--- a/index.html
+++ b/index.html
@@ -8,23 +8,22 @@
     <title>Recipes</title>
 </head>
 <body>
+ 
+        <div class="main">
 
-    <div class="main">
+            <div class="box">
 
-        <div class="box">
-
-            <h4>Awesome Recipe Finder</h4>
-            <div class="search">
-                <input type="text" id="search-input" placeholder="Forage for food">
-                <!-- <button><img href="icons8-search-26.png"></button> -->
-                <input type="submit" value="" placeholder="" id="search-button">
+                <h4>Awesome Recipe Finder</h4>
+                <div class="search">
+                    <input type="text" id="search-input" placeholder="Forage for food">
+                    <!-- <button><img href="icons8-search-26.png"></button> -->
+                    <input type="submit" id="search-button" value="" placeholder="">
+                </div>
             </div>
+            <div id="recipes"></div>
+            <footer>Adriana &copy; 2024</footer>
         </div>
-        
-        <div id="recipes"></div>
 
-    </div>
-    
     <script src="script.js"></script>
 </body>
 </html>
