Input text and icon changed

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
                 <h4>Awesome Recipe Finder</h4>
                 <div class="search">
-                    <input type="text" class="search-input" placeholder="Forage for food">
+                    <input type="text" id="search-input" placeholder="Forage for food">
                     <!-- <button><img href="icons8-search-26.png"></button> -->
-                    <input type="submit" class="search-button" value="" placeholder="">
+                    <input type="submit" id="search-button" value="" placeholder="">
                 </div>
             </div>
             <div id="recipes"></div>
